# Intelligent-call-summarizer-agent

./: .env.example  .gitignore  Project_description.txt  README.md  architecture_diagram.html  architecture_diagram.md  main.py  pyproject.toml  run.py
Sample_data/examples/: README.md  bad-1-feedback.txt  bad-1-summary.txt  bad-1-transcript.txt  bad-2-feedback.txt  bad-2-summary.txt  bad-2-transcript.txt  bad-3-feedback.txt  bad-3-summary.txt  bad-3-transcript.txt  bad-4-feedback.txt  bad-4-summary.txt  bad-4-transcript.txt  bad-5-feedback.txt  bad-5-summary.txt  bad-5-transcript.txt  good-1-feedback.txt  good-1-summary.txt  good-1-transcript.txt  good-10-feedback.txt  good-10-summary.txt  good-10-transcript.txt  good-2-summary.txt  good-2-transcript.txt  good-3-summary.txt  good-3-transcript.txt  good-4-summary.txt  good-4-transcript.txt  good-5-feedback.txt  good-5-summary.txt  good-5-transcript.txt  good-6-feedback.txt  good-6-summary.txt  good-6-transcript.txt  good-7-summary.txt  good-7-transcript.txt  good-8-feedback.txt  good-8-summary.txt  good-8-transcript.txt  good-9-feedback.txt  (+17 more)
api/: app.py  schemas.py
api/middleware/: __init__.py  (+1 more)
call_summarizer/: config.py  evaluator.py  graph.py  guardrails.py  input_guardrails.py  logging_config.py  models.py  service.py  storage.py  summarizer.py  transcript.py  validator.py
scripts/: generate_and_evaluate.py  run_evaluation.py
tests/: test_api_performance.py  test_evaluator.py  test_guardrails.py  test_input_guardrails.py  test_storage.py  test_summarizer.py  test_transcript.py  test_validator.py
ui/: app.py
(+33 files in other folders)
